# Company-Evaluator

./: README.md
Company-Evaluator/: .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
Company-Evaluator/Report_parser/: parser.py
Company-Evaluator/agents/: base.py  company_agent.py  finance_agent.py  models.py  news_agent.py  registry.py  report_agent.py  risk_agent.py  slide_agent.py  valuation_agent.py
Company-Evaluator/agents/prompts/: company_research.txt  financial_analysis.txt  newsandweb.txt  report_gen.txt  risk_analysis.txt  slides.txt  valuation_analysis.txt
Company-Evaluator/backend/: app.py  config.py
Company-Evaluator/cache/: __init__.py  api_cache.py  decorators.py  exceptions.py  keys.py  llm_cache.py  manager.py  memory_cache.py  redis.py  serializers.py  workflow_cache.py
Company-Evaluator/config/: constants.py  settings.py
Company-Evaluator/data_sources/: base.py  exceptions.py  factory.py
Company-Evaluator/database/: base.py  models.py  session.py
Company-Evaluator/docker/: backend.Dockerfile
Company-Evaluator/exporters/: markdown_exporter.py  pdf_exporter.py  ppt_exporter.py  style.py
Company-Evaluator/financial_engine/: calculator.py  cashflow.py  growth.py  leverage.py  liquidity.py  profitability.py  returns.py
Company-Evaluator/frontend/: package-lock.json  package.json
Company-Evaluator/graphs/: builder.py  company_graph.py
Company-Evaluator/llms/: config.py  factory.py
Company-Evaluator/monitoring/: health_check.py
Company-Evaluator/observability/: __init__.py  logger.py  middleware.py  request_context.py
Company-Evaluator/outputs/: AAPL_Report.md  BANKBARODA.NS_Report.md  HDFCBANK.NS_Report.md  JNJ_Report.md  NVDA_Report.md  RELIANCE.NS_Report.md
Company-Evaluator/schemas/: company.py  finance.py  financial_metrics.py  news.py  reportoutput.py  stock.py
Company-Evaluator/scripts/: test_data_layer.py  test_fc.py  test_financial_agent.py  test_graph.py  test_llm.py  test_news_agent.py  test_pdf.py  test_ppt.py  test_registry.py  test_report_agent.py  test_research_agent.py  test_risk_agent.py  test_valuation_agent.py  test_yahoo.py
Company-Evaluator/state/: state.py
(+75 files in other folders)
