[project]
name = "company-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.0",
    "anyio>=4.13.0",
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.1",
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "deepeval>=3.9.6",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "finnhub-python>=2.4.28",
    "flagembedding>=1.4.0",
    "google-genai>=2.8.0",
    "graphviz>=0.21",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.8.9",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "markdown-it-py>=4.2.0",
    "markdown2>=2.5.5",
    "mistralai>=1.9.11",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "newsapi-python>=0.2.7",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.13.0",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "redis>=8.0.0",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "rich>=14.3.4",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.25",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
    "unstructured>=0.18.32",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
    "yfinance>=1.4.1",
]
